# vibeforge

./: AGENT.md  index.html  package-lock.json  package.json  tailwind.config.js
.vibeforge/: config.json
.vibeforge/skills/: accessibility.md  agent-harness-construction.md  blueprint.md  create-skill.md  design-system.md  frontend-design-direction.md  frontend-patterns.md  index.md  make-interfaces-feel-better.md  mcp-server-patterns.md  motion-foundations.md  motion-patterns.md  motion-ui.md  rust-patterns.md  security-review.md  tdd-workflow.md  terminal-ops.md  verification-loop.md
plan/: add-git-enforcement-to-agent-instructions-2025-06-07.md  add-security-skill-to-vibeforge-2025-06-07.md  establish-structured-agent-tracking-2025-06-06.md  m3-ai-diff-2025-06-09.md  m3-cmd-palette-2025-06-09.md  rewrite-history-purge-internal-refs-2025-06-08.md  vibeforge-main-implementation-roadmap-2025-06-07.md  vibeforge-phase1-workspace-and-filetree-2025-06-09.md  vibeforge-phase2-orchestration-foundation-2025-06-10.md  vibeforge-phase2-terminals-pty-2025-06-09.md  vibeforge-tauri-bootstrap-phase0-2025-06-09.md  vibeforge-ui-design-system-and-frontend-first-2025-06-07.md
public/stitch/: vibeforge-dashboard.html
spec/: structured-workflow-and-agent-file.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AIDiffPanel.tsx  BrowserPanel.tsx  CommandPalette.tsx  FileTree.tsx  GlassPanel.tsx  HttpClientPanel.tsx  TerminalPane.tsx
src/utils/: diffUtils.ts
track/: vibeforge-progress.md
