[package]
name = "vibeforge"
version = "0.1.0"
description = "Vibeforge — focused multi-agent desktop workspace for AI coding (plan/spec/track enforced)"
authors = ["Lương Duy Khang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["fs-read-dir", "fs-read-text-file", "fs-write-text-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

