[package]
name = "vibeforge"
version = "0.1.0"
description = "Vibeforge — focused multi-agent desktop workspace for AI coding (plan/spec/track enforced)"
authors = ["Lương Duy Khang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY support for real interactive terminals (Phase 2).
# portable-pty provides cross-platform PTY (ConPTY on Windows, unix pty).
# Security note (per AGENT.md + security-review skill): PTY = ability to execute
# arbitrary processes on the user's machine. We MUST restrict to:
# - Explicit user shell (powershell / cmd / sh)
# - The known agent launchers from the topbar (claude, codex, gemini, aider)
# Never allow free-form command execution from UI or future agent context at this stage.
portable-pty = "0.8"

